--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "express-session": "^1.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +29,7 @@
     "type": "module",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000", 
+  "proxy": "http://localhost:4000", 
   "browserslist": {
     "production": [
       ">0.2%",
