--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.2",
@@ -19,8 +20,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "express-session": "^1.18.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,7 +29,7 @@
     "type": "module",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000", 
+  "proxy": "http://localhost:4000",
   "browserslist": {
     "production": [
       ">0.2%",
