--- a/package.json
+++ b/package.json
@@ -23,7 +23,13 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "sequelize": "^6.37.3",
+    "sequelize-cli": "^6.6.2",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-kakao": "^1.0.1",
+    "passport-local": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
